<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackersDiet</string>
    <string name="title_month_detail">Month Detail</string>
    <string name="downloadingFromHackDietOnline">Downloading from Hackers Diet Online</string>
    <string name="uploadingToHackDietOnline">Uploading to Hackers Diet Online</string>
    <string name="errorUsernameIsEmpty">Error: Username is empty!</string>
    <string name="errorPasswordIsEmpty">Error: Password is empty!</string>
    <string name="reallySyncFromHDO">Really sync from HDO? This will overwrite your local data!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reallySyncToHDO">Really sync to the Hackers Diet Online? This will overwrite all your data there!</string>
    <string name="loginInProgress">Contacting the Hackers Diet Online</string>
    <string name="loginSuccessful">Login successful!</string>
    <string name="errorLoginFailed">Login failed! Incorrect credentials?</string>
    <string name="downloadFromHDOSuccessful">Successfully downloaded data from the Hackers Diet Online!</string>
    <string name="requestingDataFromHDO">Downloading data from the Hackers Diet Online</string>
    <string name="errorCouldNotReadData">Could not read data from HDO!</string>
    <string name="uploadToHDOSuccessful">Successfully uploaded data to the Hackers Diet Online!</string>
    <string name="sendigDataToHDO">Uploading data to the Hackers Diet Online</string>
    <string name="settings">Settings</string>
    <string name="menuSave">Save</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="prefshelptext">If you want to sync your data to the Hackers Diet Online, enter your credentials here:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="syncup">Sync to HD Online</string>
    <string name="syncdown">Sync from HD Online</string>
    <string name="dummyTrend">87.6</string>
    <string name="dummyVar">-1.2</string>
    <string name="weight">Weight</string>
    <string name="rung">Rung</string>
    <string name="empty"></string>
    <string name="comment">Comment</string>
    <string name="saveFirst">Do you want to save before leaving the Hackers Diet?</string>
    <string name="dontQuit">Don\'t quit</string>
    <string name="aboutHackDietOffline">The Hackers Diet Offline, Copyright © 2014 Benjamin Schieder\nThis program comes with ABSOLUTELY NO WARRANTY! For details see https://www.benjamin-schieder.de/</string>
    <string name="thanks">Thanks!</string>
    <string name="HideAds">Hide Ads</string>
    <string name="Cheatcode">Enter Cheatcode</string>
    <string name="ShowAds">Show ads</string>
    <string name="Excercise">Exercise</string>
    <string name="excerciseBends">Bends:</string>
    <string name="excerciseSitUps">Sit ups:</string>
    <string name="excerciseLegLifts">Leg lifts:</string>
    <string name="excercisePushups">Push ups:</string>
    <string name="excerciseSteps">Run/Jumps:</string>
    <string name="addRungToday">Add Rung to todays entry</string>
    <string name="toastAddedRungToTodaysEntry">Added rung %d to todays entry.</string>
    <string name="rungNumber">Rung %d</string>
    <string name="autosave">Autosave</string>
    <string name="autosaveonclose">Autosave when leaving App</string>
    <string name="flag">Flag</string>
    <string name="aboutVersion" translatable="false">2024-12-15-dev</string>
    <string name="select_local_save_path">Select local save path</string>
    <string name="disabled">Disabled</string>
    <string name="txtWeight">W: %.1f</string>
    <string name="txtTrend">T: %.1f</string>
    <string name="txtVar">%+.1f</string>
    <string name="_87_6" translatable="false">87.6</string>
    <string name="_0_2" translatable="false">-0.2</string>
    <string name="enter_day">Enter day %s:</string>
    <string name="LocalizedDate">MMMM dd, yyyy</string>
    <string name="restore_local_backup">Restore local backup</string>
    <string name="toast_weight_must_be_positive">Weight must be positive and greater than zero!</string>

    <color name="weightLoss">#00ff00</color>
    <color name="weightGain">#ff0000</color>
    <color name="weightConstant">#000000</color>
    <color name="backgroundColor">#3a81b8</color>
    <color name="flagged">#3a81b8</color>

</resources>
