<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuExcercise"
        android:enabled="true"
        android:title="@string/Excercise"
        android:visible="true" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        android:visible="true" />
    <item
        android:id="@+id/save"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menuSave"
        android:visible="true" />
    <item
        android:id="@+id/menuAbout"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/about"
        android:visible="true" />
</menu>